2005-02-07  Andreas Kupries <andreask@activestate.com>

	* generic/tclXkeylist.c (FindKeyedListEntry): Moved a C99 specific
	  variable declaration to the top of its block, making it C89
	  compatible.

2005-02-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/keylist.test, generic/tclXkeylist.c: improve efficiency of
	keyed lists by layering a hash table over the existing linear
	list.  This has significant performance improvements for larger
	lists.  To avoid use of the hash table, add
	-DNO_KEYLIST_HASH_TABLE to your CFLAGS.

	* tests/profile.test: update to pass 8.4 bcc changes

	* generic/tclXsignal.c (FormatSignalListEntry): dup string passed
	to TclX_KeyedListSet to ensure we don't break const-ness.

	* configure, tclconfig/tcl.m4: increase Linux default opt level to
	-O2.

2005-01-21  Andreas Kupries <andreask@activestate.com>

	* unix/tclXunixOS.c: Converted both implementations of TclXOSsleep
	* win/tclXwinOS.c:   from direct access to native time functions
	                     to the use of Tcl's more abstract interface
	                     (Tcl_Sleep). For the reason behind _this_
	                     change see TIP #233. Our change here now
	                     causes TclX to be automatically in sync
	                     with any virtualization set up in the core.

2005-01-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclXfcntl.c: make attrNames static

2004-12-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/cmdtrace.test: updated for minor whitespace changes in Tcl
	8.4 results.  Will fail on 8.3, but that's not a concern.

2004-12-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: cygpath a few required buildhelp vars
	* configure, configure.in: refactor --with-help check to add 'col'
	prog check and defer them until TclX help is requested.
	* library/buildhelp.tcl (buildhelp): convert system call to exec
	to allow it to work on Windows

2004-12-01  Jeff Hobbs  <jeffh@ActiveState.com>
