@@ -1,3 +1,9 @@
+2005-03-16  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tclXmath.c: add ability to handle wide values in min/max
+	math functions and commands.
+	Merged TclX_MinFunc and TclX_MaxFunc into TclX_MinMaxFunc.
+
 2005-02-07  Andreas Kupries <andreask@activestate.com>
 
 	* generic/tclXkeylist.c (FindKeyedListEntry): Moved a C99 specific
